--- a/req-rep/package.json
+++ b/req-rep/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "prompt-sync": "^4.2.0",
-    "zeromq": "^6.0.0-beta.19"
+    "zeromq": "^6.0.0-beta.19",
+    "getpass": "^0.1.7"
   }
 }
