--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,63 @@
+# docker-compose.yml (Versão Final com Bind Mount)
+
+# A seção 'volumes:' no topo NÃO é mais necessária, pode apagar.
+
 services:
   broker:
-    build:
-      context: ./req-rep
-      dockerfile: Dockerfile_broker
+    build: { context: ./req-rep, dockerfile: Dockerfile_broker }
     container_name: broker
-    ports:
-      - "5555:5555"
-      - "5556:5556"
+    ports: ["5555:5555", "5556:5556"]
 
   proxy:
-      build:
-        context: ./proxy
-        dockerfile: Dockerfile
-      container_name: proxy
-      command: ["python", "-u", "proxy.py"]
-      ports:
-        - "5557:5557"
-        - "5558:5558"
+    build: { context: ./proxy, dockerfile: Dockerfile }
+    container_name: proxy
+    command: ["python", "-u", "proxy.py"]
+    ports: ["5557:5557", "5558:5558"]
 
-  servidor:
-    build:
-      context: ./req-rep
-      dockerfile: Dockerfile_servidor
-    container_name: servidor
+  servidor-1:
+    build: { context: ./req-rep, dockerfile: Dockerfile_servidor }
+    hostname: servidor-1
+    depends_on: [broker, proxy]
+    environment:
+      - SERVER_ID=1
+      - TOTAL_SERVERS=3
+      - PYTHONUNBUFFERED=1
     volumes:
-      - ./messages.log:/app/messages.log
-      - ./usuarios.json:/app/usuarios.json
-      - ./canais.json:/app/canais.json
-    depends_on:
-      - broker
-      - proxy
+      # CORREÇÃO: Mapeia a pasta local para a pasta interna do container
+      - ./shared_data:/app/election
+
+  servidor-2:
+    build: { context: ./req-rep, dockerfile: Dockerfile_servidor }
+    hostname: servidor-2
+    depends_on: [broker, proxy]
+    environment:
+      - SERVER_ID=2
+      - TOTAL_SERVERS=3
+      - PYTHONUNBUFFERED=1
+    volumes:
+      # CORREÇÃO: Todos apontam para a MESMA pasta local
+      - ./shared_data:/app/election
+
+  servidor-3:
+    build: { context: ./req-rep, dockerfile: Dockerfile_servidor }
+    hostname: servidor-3
+    depends_on: [broker, proxy]
+    environment:
+      - SERVER_ID=3
+      - TOTAL_SERVERS=3
+      - PYTHONUNBUFFERED=1
+    volumes:
+      # CORREÇÃO: Assim, todos compartilham o mesmo "chão"
+      - ./shared_data:/app/election
 
   bot-go:
-    build:
-      context: ./proxy
-      dockerfile: Dockerfile_botgo
-    depends_on:
-      - servidor
+    build: { context: ./proxy, dockerfile: Dockerfile_botgo }
+    depends_on: [servidor-1, servidor-2, servidor-3]
     deploy:
       replicas: 2
 
   cliente-js:
-    build:
-      context: ./req-rep
-      dockerfile: Dockerfile_cliente
+    build: { context: ./req-rep, dockerfile: Dockerfile_cliente }
     stdin_open: true 
     tty: true
-    depends_on:
-      - servidor
+    depends_on: [servidor-1]
