--- a/req-rep/Dockerfile_servidor
+++ b/req-rep/Dockerfile_servidor
@@ -2,5 +2,5 @@ FROM python:3.9-slim
 ENV LANG C.UTF-8
 WORKDIR /app
 COPY servidor.py /app/main.py
-RUN pip install pyzmq
+RUN pip install pyzmq PyJWT
 CMD ["python", "-u", "main.py"]
